@@ -1,5 +1,12 @@
 BEGIN;
 
+CREATE TABLE releases (
+    version         FLOAT       PRIMARY KEY,
+    installed_at    DATETIME    NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    installer_name  TEXT        NOT NULL,
+    installer_email TEXT        NOT NULL
+);
+
 CREATE TABLE projects (
     project         TEXT        PRIMARY KEY,
     uri             TEXT            NULL UNIQUE,
